<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fields_hint_type"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:nextFocusForward="@id/name">

        <requestFocus />
    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fields_hint_name"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:nextFocusForward="@id/owner" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/owner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fields_hint_owner"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:nextFocusForward="@id/address" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fields_hint_address"
        android:imeOptions="actionDone"
        android:maxLines="1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_info_24px"
        android:drawablePadding="4dp"
        android:text="@string/fiends_info"
        android:textSize="14sp"
        app:drawableTint="?android:attr/textColorSecondary" />

    <Button
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@android:string/ok" />

</LinearLayout>
